--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Welcome Slider
 <section class="hero-area">
 	<div class="block">
 		
-		<h1>Experience the the Oron Magic</h1>
+		<h1>Experience the Oron Magic</h1>
 		<p>NINE DECADES OF ORON UNION ACTIVITIES </p>
 		<a data-scroll href="#services" class="btn btn-transparent">Explore The Possibilities</a>
 	</div>
@@ -109,9 +109,7 @@ Welcome Slider
                 <li><a data-scroll href="#body">The Oron Nation</a></li>
                 <li><a data-scroll href="#about">About Us</a></li>
                 <li><a data-scroll href="#services">Services</a></li>
-                <li><a data-scroll href="#portfolio">Portfolio</a></li>
                 <li><a data-scroll href="#our-team">Team</a></li>
-                <li><a data-scroll href="#pricing">Pricing</a></li>
                 <li><a data-scroll href="#blog">Blog</a></li>
                 <li><a data-scroll href="#contact-us">Contact</a></li>
             </ul>
@@ -326,6 +324,8 @@ Start Call To Action
 </section>   <!-- End section -->
 
 
+
+					
 
 		<div id="scroll-up">
 			up
